Fix Vercel build error: set outputDirectory to public

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
     "functions": {
         "api/index.php": { "runtime": "vercel-php@0.7.0" }
     },
+    "outputDirectory": "public",
     "routes": [
         {
             "src": "/(.*)",
