--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,7 @@
     },
     "outputDirectory": "public",
     "routes": [
+        { "handle": "filesystem" },
         {
             "src": "/(.*)",
             "dest": "/api/index.php"
