--- a/.env.example
+++ b/.env.example
@@ -58,8 +58,9 @@ MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+AWS_DEFAULT_REGION=ap-southeast-1
+AWS_BUCKET=storage
+AWS_USE_PATH_STYLE_ENDPOINT=true
+AWS_ENDPOINT=https://<project-ref>.supabase.co/storage/v1/s3
 
 VITE_APP_NAME="${APP_NAME}"
