--- a/vercel.json
+++ b/vercel.json
@@ -7,10 +7,8 @@
     "outputDirectory": "public",
     "routes": [
         { "handle": "filesystem" },
-        {
-            "src": "/(.*)",
-            "dest": "/api/index.php"
-        }
+        { "src": "/build/(.*)", "dest": "/build/$1" },
+        { "src": "/(.*)", "dest": "/api/index.php" }
     ],
     "env": {
         "APP_ENV": "production",
