--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,13 @@
     "functions": {
         "api/index.php": { "runtime": "vercel-php@0.7.4" }
     },
-    "outputDirectory": "public",
     "routes": [
-        { "handle": "filesystem" },
-        { "src": "/build/(.*)", "dest": "/build/$1" },
+        { "src": "/build/(.*)", "dest": "/public/build/$1" },
+        { "src": "/storage/(.*)", "dest": "/public/storage/$1" },
+        { "src": "/images/(.*)", "dest": "/public/images/$1" },
+        { "src": "/img/(.*)", "dest": "/public/img/$1" },
+        { "src": "/favicon.ico", "dest": "/public/favicon.ico" },
+        { "src": "/robots.txt", "dest": "/public/robots.txt" },
         { "src": "/(.*)", "dest": "/api/index.php" }
     ],
     "env": {
